# Template3D

./: .gitignore  CMakeLists.txt  README.md  Template.sln
Template/: Template.vcxproj  Template.vcxproj.filters
Template/dependencies/lib/: glfw3.lib
Template/dependencies/lib/glfw3/: glfw3-release.lib
Template/src/: common.hpp  main.cpp
shaders/: Mandelbrot.frag  Mandelbrot.vert  Model.frag  Model.vert  ModelDiffuse.frag  Standard.frag  Standard.vert  Textures.frag  Textures.vert
src/: App.cpp  App.hpp  AxisRotator.cpp  AxisRotator.hpp  BMPReader.cpp  BMPReader.hpp  BaseApp.cpp  BaseApp.hpp  BaseApplication.hpp  Camera.cpp  Camera.hpp  CameraFrustum.cpp  CameraFrustum.hpp  Drawable.cpp  Drawable.hpp  DrawableManager.cpp  DrawableManager.hpp  EulerAnglesApp.cpp  EulerAnglesApp.hpp  EulerRotator.cpp  EulerRotator.hpp  IApp.cpp  IApp.hpp  MandelbrotDrawable.cpp  MandelbrotDrawable.hpp  ModelApp.cpp  ModelApp.hpp  ModelDrawable.cpp  ModelDrawable.hpp  OrthographicApp.cpp  OrthographicApp.hpp  Plane.cpp  Plane.hpp  Ray.hpp  Rotator.cpp  Rotator.hpp  TexturedDrawable.cpp  TexturedDrawable.hpp  TexturesApp.cpp  TexturesApp.hpp  (+11 more)
src/examples/: AxisRotator.hpp  EmbreeApp.cpp  EmbreeApp.hpp  EulerRotator.cpp  MandelbrotDrawable.cpp  ModelApp.hpp  TexturedDrawable.hpp  TexturesApp.cpp  TripodDrawable.hpp
vs2012/Template/: Template.vcxproj  Template.vcxproj.filters
vs2012/Template/dependencies/lib/: assimpd.lib
vs2012/Template/dependencies/lib/glfw3/: glfw3-relwithdebinfo.lib
